--- a/VirtualBoxTrayManager/nbproject/project.properties
+++ b/VirtualBoxTrayManager/nbproject/project.properties
@@ -3,8 +3,11 @@ annotation.processing.enabled.in.editor=false
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.desc=
+application.homepage=https://github.com/tobihille/vbox-tray-manager
 application.title=VirtualBoxTrayManager
-application.vendor=neo
+application.vendor=Tobias Hille
+auxiliary.org-netbeans-spi-editor-hints-projects.perProjectHintSettingsFile=nbproject/cfg_hints.xml
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=
 # This directory is removed when the project is cleaned:
@@ -29,9 +32,13 @@ dist.jar=${dist.dir}/VirtualBoxTrayManager.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.vboxjxpcom.jar=lib/vboxjxpcom.jar
 includes=**
+jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
-javac.classpath=
+jar.index=${jnlp.enabled}
+javac.classpath=\
+    ${file.reference.vboxjxpcom.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -50,27 +57,38 @@ javadoc.encoding=${source.encoding}
 javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
-javadoc.private=false
+javadoc.private=true
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
+jnlp.codebase.type=no.codebase
+jnlp.descriptor=application
+jnlp.enabled=false
+jnlp.mixed.code=default
+jnlp.offline-allowed=false
+jnlp.signed=false
+jnlp.signing=
+jnlp.signing.alias=
+jnlp.signing.keystore=
 main.class=virtualboxtraymanager.VirtualBoxTrayManager
+# Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
+manifest.custom.codebase=
+# Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
+manifest.custom.permissions=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
 platform.active=default_platform
+project.licensePath=./nbproject/licenseheader.txt
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-# Space-separated list of JVM arguments used when running the project.
-# You may also define separate properties like run-sys-prop.name=value instead of -Dname=value.
-# To set system properties for unit tests define test-sys-prop.name=value:
-run.jvmargs=
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
 src.dir=src
+src.lib.dir=lib
 src.resources.dir=resources
 test.src.dir=test
