Debugged Worker, can now run all commands in standalone - mode

--- a/VirtualBoxTrayManager/nbproject/project.properties
+++ b/VirtualBoxTrayManager/nbproject/project.properties
@@ -32,7 +32,7 @@ dist.jar=${dist.dir}/VirtualBoxTrayManager.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
-file.reference.vboxjxpcom.jar=lib/vboxjxpcom.jar
+file.reference.vboxjxpcom.jar=../vboxjxpcom.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
@@ -71,7 +71,7 @@ jnlp.signed=false
 jnlp.signing=
 jnlp.signing.alias=
 jnlp.signing.keystore=
-main.class=virtualboxtraymanager.VirtualBoxTrayManager
+main.class=WorkerJob.Worker
 # Optional override of default Codebase manifest attribute, use to prevent RIAs from being repurposed
 manifest.custom.codebase=
 # Optional override of default Permissions manifest attribute (supported values: sandbox, all-permissions)
@@ -84,6 +84,7 @@ project.licensePath=./nbproject/licenseheader.txt
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
+run.jvmargs=-Dvbox.home=/usr/lib/virtualbox/
 run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
