implemented cron via cron4j

--- a/VirtualBoxTrayManager/nbproject/project.properties
+++ b/VirtualBoxTrayManager/nbproject/project.properties
@@ -32,13 +32,15 @@ dist.jar=${dist.dir}/VirtualBoxTrayManager.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=
 excludes=
+file.reference.cron4j-2.2.5.jar=../cron4j-2.2.5.jar
 file.reference.vboxjxpcom.jar=../vboxjxpcom.jar
 includes=**
 jar.archive.disabled=${jnlp.enabled}
 jar.compress=false
 jar.index=${jnlp.enabled}
 javac.classpath=\
-    ${file.reference.vboxjxpcom.jar}
+    ${file.reference.vboxjxpcom.jar}:\
+    ${file.reference.cron4j-2.2.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=true
@@ -58,6 +60,7 @@ javadoc.noindex=false
 javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.private=true
+javadoc.reference.cron4j-2.2.5.jar=../cron4j-2.2.5/doc/api/
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
@@ -89,6 +92,7 @@ run.test.classpath=\
     ${javac.test.classpath}:\
     ${build.test.classes.dir}
 source.encoding=UTF-8
+source.reference.cron4j-2.2.5.jar=../cron4j-2.2.5/src
 src.dir=src
 src.lib.dir=lib
 src.resources.dir=resources
